dev/pickpro/pickpro-indexing-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-indexing-api
  namespace: pickpro
  labels:
    app: pickpro-indexing-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pickpro-indexing-api
  template:
    metadata:
      labels:
        app: pickpro-indexing-api
        app.kubernetes.io/part-of: soludev-workload
    spec:
      containers:
        - name: pickpro-indexing-api
          image: kaiohz/pickpro:pickpro-indexing-api-72c1d959c19528255b66701f6459a1a7ba1c7e97
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /pickpro/rest/v1/health/status
              port: 8000
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /pickpro/rest/v1/health/status
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 5
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "3Gi"
              cpu: "2000m"
      imagePullSecrets:
        - name: pickpro-docker-secret
