dev/pickpro/pickpro-indexing-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pickpro-indexing-api
  namespace: pickpro
  labels:
    app: pickpro-indexing-api
spec:
  type: ClusterIP
  selector:
    app: pickpro-indexing-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
