dev/pickpro/pickpro-indexing-api/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pickpro-indexing-api-webhooks-ingress
  namespace: pickpro
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: pickpro-indexing-api.soludev.tech
      http:
        paths:
          - path: /pickpro/rest/v1/webhooks
            pathType: Prefix
            backend:
              service:
                name: pickpro-indexing-api
                port:
                  number: 8000
